Fix SETTING nav item white background in dark mode
The fixed-position Setting menu item had hardcoded #fff background,
making it invisible against the dark background.

--- a/packages/evershop/src/components/admin/NavigationItemGroup.scss
+++ b/packages/evershop/src/components/admin/NavigationItemGroup.scss
@@ -26,7 +26,7 @@
     bottom: 0px;
     left: 0px;
     width: 200px;
-    background-color: #fff;
+    background-color: var(--background);
     padding-bottom: 1.25rem;
     padding-top: 1rem;
   }
